@@ -1,3 +1,9 @@
+20050609
+ - (dtucker) [cipher.c openbsd-compat/Makefile.in
+   openbsd-compat/openbsd-compat.{c,h} openbsd-compat/openssl-compat.h]
+   Move compatibility code for supporting older OpenSSL versions to the
+   compat layer.  Suggested by and "no objection" djm@
+
 20050607
  - (dtucker) [configure.ac] Continue the hunt for LLONG_MIN and LLONG_MAX:
    in today's episode we attempt to coax it from limits.h where it may be
